--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "url": "https://github.com/cedx/reverse-proxy.js.git"
   },
   "scripts": {
-    "doc": "yuidoc --lint && yuidoc --no-code",
+    "doc": "yuidoc --lint && yuidoc --no-code --no-color",
     "lint": "jshint --verbose bin lib",
-    "start": "node bin/cli.js --help"
+    "start": "node bin/cli.js"
   }
 }
