--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "commander": "^2.2.0",
+    "forever": "^0.11.1",
     "http-proxy": "^1.1.4"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
   "scripts": {
     "doc": "yuidoc --lint && yuidoc --no-code",
     "lint": "jshint --verbose bin lib",
-    "start": "node bin/cli.js"
+    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l var/forever.log --append --minUptime 15000 --spinSleepTime 15000 --uid reverse-proxy bin/cli.js --config etc",
+    "stop": "forever stop reverse-proxy"
   }
 }
