--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "commander": "^2.2.0",
+    "commander": "^2.3.0",
     "forever": "^0.11.1",
-    "http-proxy": "^1.1.4"
+    "http-proxy": "^1.1.6"
   },
   "devDependencies": {
-    "jshint": "^2.5.1",
+    "jshint": "^2.5.2",
     "yuidocjs": "^0.3.50"
   },
   "engines": {
-    "node": ">=0.10.29"
+    "node": ">=0.10.30"
   },
   "jshintConfig": {
     "camelcase": true,
@@ -55,7 +55,7 @@
   "scripts": {
     "doc": "yuidoc --lint && yuidoc --no-code",
     "lint": "jshint --verbose bin lib",
-    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l var/forever.log --append --minUptime 15000 --spinSleepTime 15000 --uid reverse-proxy bin/cli.js --config etc",
+    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 15000 --spinSleepTime 15000 --uid reverse-proxy bin/cli.js --config etc",
     "stop": "forever stop reverse-proxy"
   }
 }
