--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Cédric Belin <cedric@belin.io>",
   "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
-  "description": "Simple reverse proxy server supporting WebSockets and hostname-based routing tables.",
+  "description": "Simple reverse proxy server supporting WebSockets.",
   "homepage": "https://github.com/cedx/reverse-proxy.js",
   "license": "MIT",
   "main": "./index",
@@ -15,11 +15,11 @@
   "dependencies": {
     "async": "^0.9.0",
     "commander": "^2.3.0",
-    "forever": "^0.11.1",
     "http-proxy": "^1.1.6"
   },
   "devDependencies": {
     "jshint": "^2.5.2",
+    "nodemon": "^1.2.1",
     "yuidocjs": "^0.3.50"
   },
   "engines": {
@@ -53,9 +53,7 @@
     "url": "https://github.com/cedx/reverse-proxy.js.git"
   },
   "scripts": {
-    "doc": "yuidoc --lint && yuidoc --no-code",
-    "lint": "jshint --verbose bin lib",
-    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 15000 --spinSleepTime 15000 --uid reverse-proxy bin/cli.js --config etc",
-    "stop": "forever stop reverse-proxy"
+    "make": "node bin/make.js",
+    "start": "node bin/cli.js"
   }
 }
