--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "options": {
       "linkNatives": true,
       "outdir": "doc/api",
-      "paths": [ "bin", "lib" ],
+      "paths": [ "lib" ],
       "tabtospace": 2,
       "theme": "default"
     }
