Project bumped to v0.2.0 due to breaking change

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./index",
   "name": "reverse-proxy-js",
   "preferGlobal": true,
-  "version": "0.1.1",
+  "version": "0.2.0",
   "bin": {
     "reverse-proxy": "./bin/cli.js"
   },
@@ -58,7 +58,7 @@
   "yuidoc": {
     "logo": "http://dev.belin.io/reverse-proxy.js/favicon.ico",
     "name": "Reverse-Proxy.js",
-    "url": "https://github.com/cedx/reverse-proxy.js",
+    "url": "https://www.npmjs.org/package/reverse-proxy-js",
     "options": {
       "linkNatives": true,
       "outdir": "doc/api",
