--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-proxy": "^1.4.3"
   },
   "devDependencies": {
+    "archiver": "^0.11.0",
     "docgen-js": "^0.1.0",
     "jshint": "^2.5.5",
     "nodemon": "^1.2.1"
