--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "commander": "^2.3.0",
-    "http-proxy": "^1.4.3"
+    "http-proxy": "^1.4.3",
+    "shelljs": "^0.3.0"
   },
   "devDependencies": {
     "archiver": "^0.11.0",
