--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "async": "^0.9.0",
     "commander": "^2.3.0",
-    "http-proxy": "^1.4.3",
+    "david": "^5.0.0",
+    "http-proxy": "^1.5.3",
     "shelljs": "^0.3.0"
   },
   "devDependencies": {
     "archiver": "^0.11.0",
     "docgen-js": "^0.1.0",
-    "jshint": "^2.5.5",
+    "jshint": "^2.5.6",
     "nodemon": "^1.2.1"
   },
   "engines": {
