--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "main": "./index",
   "name": "reverse-proxy-js",
   "preferGlobal": true,
-  "version": "0.2.2",
+  "version": "0.3.0",
   "bin": {
     "reverse-proxy": "./bin/cli.js"
   },
   "dependencies": {
-    "async": "^0.9.0",
     "commander": "^2.5.1",
-    "http-proxy": "^1.8.1",
-    "shelljs": "^0.3.0"
+    "forever": "^0.13.0",
+    "promise": "^6.0.1",
+    "http-proxy": "^1.8.1"
   },
   "devDependencies": {
-    "archiver": "^0.13.0",
-    "david": "^6.0.1",
+    "david": "^6.1.1",
+    "del": "^1.1.1",
     "docgen-js": "^0.0.1",
-    "jshint": "^2.5.11",
-    "nodemon": "^1.2.1"
+    "gulp": "^3.8.10",
+    "gulp-jshint": "^1.9.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-zip": "^2.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -31,7 +33,7 @@
     "camelcase": true,
     "freeze": true,
     "indent": 2,
-    "latedef": true,
+    "latedef": "nofunc",
     "loopfunc": true,
     "newcap": true,
     "node": true,
@@ -40,7 +42,10 @@
     "strict": true,
     "trailing": true,
     "undef": true,
-    "unused": true
+    "unused": true,
+    "globals": {
+      "Promise": true
+    }
   },
   "keywords": [
     "http",
@@ -55,13 +60,13 @@
     "url": "https://github.com/cedx/reverse-proxy.js.git"
   },
   "scripts": {
-    "make": "node bin/make.js",
-    "start": "node bin/cli.js"
+    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l var/forever.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
+    "stop": "forever stop reverse-proxy"
   },
   "yuidoc": {
     "logo": "http://dev.belin.io/reverse-proxy.js/favicon.ico",
     "name": "Reverse-Proxy.js",
-    "url": "https://www.npmjs.org/package/reverse-proxy-js",
+    "url": "https://www.npmjs.com/package/reverse-proxy-js",
     "options": {
       "linkNatives": true,
       "outdir": "doc/api",
