--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "http-proxy": "^1.8.1"
   },
   "devDependencies": {
-    "david": "^6.1.1",
     "del": "^1.1.1",
     "docgen-js": "^0.0.1",
     "gulp": "^3.8.10",
+    "gulp-david": "^0.1.0",
     "gulp-jshint": "^1.9.0",
     "gulp-load-plugins": "^0.8.0",
     "gulp-zip": "^2.0.2"
