--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Cédric Belin <cedric@belin.io>",
-  "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
+  "bugs": "https://bitbucket.org/cedx/reverse-proxy.js/issues",
   "description": "Simple reverse proxy server supporting WebSockets.",
-  "homepage": "https://github.com/cedx/reverse-proxy.js",
+  "homepage": "https://bitbucket.org/cedx/reverse-proxy.js",
   "license": "MIT",
   "main": "./index",
   "name": "reverse-proxy-js",
@@ -12,18 +12,18 @@
     "reverse-proxy": "./bin/cli.js"
   },
   "dependencies": {
-    "commander": "^2.6.0",
+    "commander": "^2.7.1",
     "forever": "^0.14.1",
-    "http-proxy": "^1.8.1"
+    "http-proxy": "^1.10.1"
   },
   "devDependencies": {
     "del": "^1.1.1",
     "docgen-js": "^0.0.1",
     "gulp": "^3.8.11",
-    "gulp-david": "^0.2.0",
-    "gulp-jshint": "^1.9.2",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-zip": "^2.0.2"
+    "gulp-david": "^0.2.1",
+    "gulp-jshint": "^1.10.0",
+    "gulp-load-plugins": "^0.9.0",
+    "gulp-zip": "^3.0.2"
   },
   "engines": {
     "node": ">=0.12.0"
@@ -53,7 +53,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/cedx/reverse-proxy.js.git"
+    "url": "https://bitbucket.org/cedx/reverse-proxy.js.git"
   },
   "scripts": {
     "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l var/forever.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
