--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "author": "Cédric Belin <cedric@belin.io>",
-  "bugs": "http://dev.belin.io/reverse-proxy.js/issues",
+  "bugs": "https://bitbucket.org/cedx/reverse-proxy.js/issues",
   "description": "Simple reverse proxy server supporting WebSockets.",
-  "homepage": "http://dev.belin.io/reverse-proxy.js",
+  "homepage": "https://bitbucket.org/cedx/reverse-proxy.js",
   "license": "MIT",
   "main": "./index",
   "name": "reverse-proxy-js",
   "preferGlobal": true,
+  "repository": "bitbucket:cedx/reverse-proxy.js",
   "version": "0.4.0",
   "bin": {
     "reverse-proxy": "./bin/cli.js"
@@ -51,10 +52,6 @@
     "server",
     "websocket"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://bitbucket.org/cedx/reverse-proxy.js.git"
-  },
   "scripts": {
     "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l var/forever.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
     "stop": "forever stop reverse-proxy"
