--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "repository": "cedx/reverse-proxy.js",
   "version": "0.5.0",
   "bin": {
-    "reverseproxy-js": "./bin/cli.js"
+    "reverse-proxy": "./bin/cli.js"
   },
   "dependencies": {
     "commander": "^2.9.0",
     "forever": "^0.15.1",
-    "http-proxy": "^1.12.0"
+    "http-proxy": "^1.12.0",
+    "js-yaml": "^3.4.3"
   },
   "devDependencies": {
     "del": "^2.1.0",
     "jsdoc": "^3.4.0",
     "jshint": "^2.8.0",
     "gulp": "^3.9.0",
-    "gulp-david": "^0.3.2",
+    "gulp-david": "^0.3.3",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-zip": "^3.0.2"
@@ -36,7 +37,6 @@
     "futurehostile": true,
     "latedef": "nofunc",
     "loopfunc": true,
-    "mocha": true,
     "nocomma": true,
     "node": true,
     "nonbsp": true,
