--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   },
   "devDependencies": {
     "del": "^2.1.0",
-    "jsdoc": "^3.4.0",
-    "jshint": "^2.8.0",
     "gulp": "^3.9.0",
     "gulp-david": "^0.3.3",
+    "gulp-istanbul": "^0.10.3",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-zip": "^3.0.2"
+    "gulp-mocha": "^2.2.0",
+    "gulp-zip": "^3.0.2",
+    "jsdoc": "^3.4.0",
+    "jshint": "^2.8.0",
+    "mocha-sonar-reporter": "^0.1.4"
   },
   "engines": {
     "node": ">=4.2.0"
@@ -37,6 +40,7 @@
     "futurehostile": true,
     "latedef": "nofunc",
     "loopfunc": true,
+    "mocha": true,
     "nocomma": true,
     "node": true,
     "nonbsp": true,
@@ -56,6 +60,7 @@
   ],
   "scripts": {
     "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l var/forever.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
-    "stop": "forever stop reverse-proxy"
+    "stop": "forever stop reverse-proxy",
+    "test": "gulp test"
   }
 }
