--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "author": "Cédric Belin <cedric@belin.io>",
-  "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
   "description": "Simple reverse proxy server supporting WebSockets.",
   "homepage": "https://github.com/cedx/reverse-proxy.js",
+  "name": "reverse-proxy-js",
+
+  "author": "Cédric Belin <cedric@belin.io>",
+  "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
   "license": "Apache-2.0",
   "main": "./lib/index.js",
-  "name": "reverse-proxy-js",
   "preferGlobal": true,
   "repository": "cedx/reverse-proxy.js",
   "version": "0.5.3",
@@ -60,7 +61,7 @@
     "websocket"
   ],
   "scripts": {
-    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l var/forever.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
+    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
     "stop": "forever stop reverse-proxy",
     "test": "gulp test"
   }
