Updated the project settings

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto
 
+.editorconfig text
 .gitattributes text
 .gitignore text
 
@@ -13,5 +14,4 @@
 
 *.gif binary
 *.ico binary
-*.jpg binary
 *.png binary
