--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 sudo: false
 
-node_js:
-- '4.4'
-- '5.11'
-- '6.2'
+env: NODE_ENV="test"
+node_js: '6.3'
+
+script: npm test
+after_script: npm run coverage
