--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "websocket"
   ],
   "scripts": {
+    "check": "david",
     "coverage": "codacy-coverage < var/lcov.info",
+    "doc": "jsdoc --configure=doc/jsdoc.json",
+    "lint": "gulp lint",
     "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
     "stop": "forever stop reverse-proxy",
     "test": "gulp test"
