--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "main": "./lib/index.js",
   "preferGlobal": true,
   "repository": "cedx/reverse-proxy",
-  "version": "0.7.0",
+  "version": "1.0.0",
 
   "bin": {
-    "reverse-proxy": "./bin/cli.js"
+    "reverse-proxy": "./bin/cli"
   },
   "dependencies": {
     "commander": "^2.9.0",
