--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   ],
   "scripts": {
     "coverage": "codacy-coverage < var/lcov.info",
+    "restart": "npm stop && gulp clean && npm start",
     "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
     "stop": "forever stop reverse-proxy",
     "test": "gulp test"
