--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-istanbul": "^1.1.1",
-    "gulp-jshint": "^2.0.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-load-plugins": "^1.3.0",
     "gulp-mocha": "^3.0.1",
     "gulp-zip": "^3.2.0",
-    "jsdoc": "^3.4.1",
-    "jshint": "^2.9.3"
+    "jsdoc": "^3.4.2"
   },
   "engines": {
     "node": ">=6.7.0"
