--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -85,7 +85,7 @@
     "brace-style": ["error", "stroustrup", {"allowSingleLine": true}],
     "camelcase": "error",
     "consistent-this": ["error", "self"],
-    "indent": ["error", 2],
+    "indent": ["error", 2, {"SwitchCase": 1}],
     "keyword-spacing": "error",
     "linebreak-style": "off",
     "line-comment-position": "error",
