--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "del": "^2.2.2",
     "esdoc": "^0.4.8",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-istanbul": "^1.1.1",
     "gulp-eslint": "^3.0.1",
     "gulp-load-plugins": "^1.3.0",
