--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Cédric Belin <cedric@belin.io>",
   "bugs": "https://github.com/cedx/reverse-proxy/issues",
   "license": "Apache-2.0",
-  "main": "./lib",
   "preferGlobal": true,
   "repository": "cedx/reverse-proxy",
   "version": "1.0.0",
+
+  "jsnext:main": "./src/index",
+  "main": "./lib/index",
 
   "bin": {
     "reverse-proxy": "./bin/cli.js"
@@ -19,10 +21,10 @@
     "forever": "^0.15.2",
     "http-proxy": "^1.15.1",
     "js-yaml": "^3.6.1",
-    "rxjs": "^5.0.0-rc.1"
+    "rxjs": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@cedx/gulp-david": "^3.0.0",
+    "@cedx/gulp-david": "^3.0.2",
     "codacy-coverage": "^2.0.0",
     "del": "^2.2.2",
     "esdoc": "^0.4.8",
@@ -30,7 +32,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-istanbul": "^1.1.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-load-plugins": "^1.3.0",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-mocha": "^3.0.1",
     "gulp-zip": "^3.2.0"
   },
@@ -39,14 +41,17 @@
   },
   "keywords": [
     "http",
+    "observable",
+    "proxy",
     "reverse",
     "routing",
-    "proxy",
+    "rxjs",
     "server",
     "websocket"
   ],
   "scripts": {
     "coverage": "codacy-coverage < var/lcov.info",
+    "prepublish": "gulp build",
     "restart": "npm stop && gulp clean && npm start",
     "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
     "stop": "forever stop reverse-proxy",
