--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "description": "Simple reverse proxy server supporting WebSockets.",
-  "homepage": "https://github.com/cedx/reverse-proxy",
+  "homepage": "https://github.com/cedx/reverse-proxy.js",
   "name": "@cedx/reverse-proxy",
 
   "author": "Cédric Belin <cedric@belin.io>",
-  "bugs": "https://github.com/cedx/reverse-proxy/issues",
+  "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
   "license": "Apache-2.0",
   "preferGlobal": true,
-  "repository": "cedx/reverse-proxy",
+  "repository": "cedx/reverse-proxy.js",
   "version": "1.0.0",
 
   "jsnext:main": "./src/index",
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "@cedx/gulp-david": "^3.0.2",
+    "babel-preset-latest": "^6.16.0",
+    "babel-register": "^6.18.0",
     "codacy-coverage": "^2.0.0",
     "del": "^2.2.2",
     "esdoc": "^0.4.8",
@@ -34,7 +36,8 @@
     "gulp-eslint": "^3.0.1",
     "gulp-load-plugins": "^1.4.0",
     "gulp-mocha": "^3.0.1",
-    "gulp-zip": "^3.2.0"
+    "gulp-zip": "^3.2.0",
+    "isparta": "^4.0.0"
   },
   "engines": {
     "node": ">=6.9.0"
