--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "dependencies": {
     "commander": "^2.9.0",
     "forever": "^0.15.3",
-    "http-proxy": "^1.16.1",
+    "http-proxy": "^1.16.2",
     "js-yaml": "^3.7.0",
-    "rxjs": "^5.0.0-rc.4"
+    "rxjs": "^5.0.1"
   },
   "devDependencies": {
     "@cedx/gulp-david": "^3.0.2",
