--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@cedx/gulp-david": "^3.0.2",
     "babel-preset-latest": "^6.16.0",
     "babel-register": "^6.18.0",
-    "codacy-coverage": "^2.0.0",
+    "coveralls": "^2.11.15",
     "del": "^2.2.2",
     "esdoc": "^0.4.8",
     "gulp": "^3.9.1",
@@ -53,7 +53,7 @@
     "websocket"
   ],
   "scripts": {
-    "coverage": "codacy-coverage < var/lcov.info",
+    "coverage": "cat var/lcov.info | coveralls",
     "prepublish": "gulp build",
     "restart": "npm stop && gulp clean && npm start",
     "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
