--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,11 @@
 
 .babelrc text
 .editorconfig text
-.eslintrc.json text
+.esdoc.json text
+.eslintrc.yaml text
 .gitattributes text
 .gitignore text
+.npmignore text
 .travis.yml text
 
 *.js text
