--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-register": "^6.18.0",
     "coveralls": "^2.11.15",
     "del": "^2.2.2",
-    "esdoc": "^0.5.1",
+    "esdoc": "^0.5.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-istanbul": "^1.1.1",
@@ -55,7 +55,7 @@
     "coverage": "cat var/lcov.info | coveralls",
     "prepublish": "gulp build",
     "restart": "npm stop && gulp clean && npm start",
-    "start": "forever start -c node -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
+    "start": "forever start -e var/stderr.log -o var/stdout.log -l reverse-proxy.log --append --minUptime 30000 --spinSleepTime 30000 --uid reverse-proxy bin/cli.js",
     "stop": "forever stop reverse-proxy",
     "test": "gulp test"
   }
