--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "scripts": {
     "coverage": "coveralls --file=var/lcov.info",
     "prepublish": "gulp build",
-    "start": "node bin/cli.js",
+    "start": "gulp serve",
     "test": "nyc --report-dir=var --reporter=lcovonly mocha --compilers=js:babel-register --recursive"
   }
 }
