Updated the documentation

--- a/example/yaml/http_headers.yaml
+++ b/example/yaml/http_headers.yaml
@@ -7,7 +7,7 @@ target:
     Authorization: Basic Z29vZHVzZXI6c2VjcmV0cGFzc3dvcmQ=
     X-Custom-Header: X-Value
 ---
-# HTTPS to HTTP
+# Routing Table
 port: 8080
 routes:
   hostname.com: 3000
