--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "commander": "^2.9.0",
     "http-proxy": "^1.16.2",
-    "js-yaml": "^3.8.2",
-    "rxjs": "^5.2.0"
+    "js-yaml": "^3.8.2"
   },
   "devDependencies": {
     "@cedx/coveralls": "^0.4.0",
