--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@cedx/coveralls": "^0.6.0",
-    "@cedx/gulp-david": "^6.1.0",
+    "@cedx/gulp-david": "^6.2.0",
     "babel-preset-env": "^1.2.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
@@ -33,6 +33,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-eslint": "^3.0.1",
     "mocha": "^3.3.0",
+    "nsp": "^2.6.3",
     "nyc": "^10.2.0"
   },
   "engines": {
