--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "Apache-2.0",
   "preferGlobal": true,
   "repository": "cedx/reverse-proxy.js",
-  "version": "3.2.0",
+  "version": "4.0.0",
 
   "main": "./lib/index",
   "module": "./src/index",
@@ -19,7 +19,8 @@
   "dependencies": {
     "commander": "^2.9.0",
     "http-proxy": "^1.16.2",
-    "js-yaml": "^3.8.3"
+    "js-yaml": "^3.8.3",
+    "morgan": "^1.8.1"
   },
   "devDependencies": {
     "@cedx/coveralls": "^0.8.0",
