Renamed the 'prepublish' script to 'prepare'

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   ],
   "scripts": {
     "coverage": "coveralls --file=var/lcov.info",
-    "prepublish": "gulp build",
+    "prepare": "gulp build",
     "start": "gulp watch",
     "test": "nyc --report-dir=var --reporter=lcovonly mocha --compilers=js:babel-register --recursive"
   }
