Updated the dependencies

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "commander": "^2.11.0",
     "http-proxy": "^1.16.2",
     "js-yaml": "^3.8.4",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "rxjs": "^5.4.2"
   },
   "devDependencies": {
     "@cedx/coveralls": "^2.0.0",
@@ -35,13 +36,15 @@
     "nyc": "^11.0.3"
   },
   "engines": {
-    "node": ">=8.1.0"
+    "node": ">=8.0.0"
   },
   "keywords": [
     "http",
+    "observable",
     "proxy",
     "reverse",
     "routing",
+    "rxjs",
     "server",
     "websocket"
   ],
