--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Cédric Belin <cedric@belin.io>",
   "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
-  "description": "Simple reverse proxy server supporting WebSockets.",
+  "description": "Observable-based reverse proxy server supporting WebSockets.",
   "homepage": "https://github.com/cedx/reverse-proxy.js",
   "license": "Apache-2.0",
   "main": "./lib/index",
