--- a/example/yaml/defaults.yaml
+++ b/example/yaml/defaults.yaml
@@ -4,7 +4,7 @@ port: 3000
 routes: {}
 target: null
 
-# Supports all options of `httpProxy.createProxyServer(options)`
+# Supports all options of `http-proxy~createProxyServer(options)`
 proxy:
   agent: null
   autoRewrite: false
@@ -18,7 +18,7 @@ proxy:
   ws: false
   xfwd: false
 
-# Supports all options of `tls.createServer(options[, secureConnectionListener])`
+# Supports all options of `tls~createServer(options[, secureConnectionListener])`
 ssl:
   ca: null
   cert: null
