--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
   "description": "Observable-based reverse proxy server supporting WebSockets.",
   "homepage": "https://github.com/cedx/reverse-proxy.js",
+  "license": "MIT",
   "main": "./lib/index",
   "name": "@cedx/reverse-proxy",
   "preferGlobal": true,
   "repository": "cedx/reverse-proxy.js",
-  "version": "6.1.0",
+  "version": "7.0.0",
   "bin": {
     "reverse-proxy": "./bin/cli.js"
   },
@@ -15,34 +16,30 @@
     "commander": "^2.11.0",
     "http-proxy": "^1.16.2",
     "js-yaml": "^3.9.1",
-    "morgan": "^1.8.2",
-    "rxjs": "^5.4.3"
+    "morgan": "^1.8.2"
   },
   "devDependencies": {
-    "@cedx/coveralls": "^3.1.0",
-    "@cedx/gulp-david": "^9.0.0",
-    "chai": "^4.1.1",
+    "@cedx/coveralls": "^4.0.0",
+    "@cedx/gulp-david": "^10.0.0",
+    "chai": "^4.1.2",
     "del": "^3.0.0",
-    "esdoc": "^1.0.1",
+    "esdoc": "^1.0.2",
     "esdoc-node": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
     "mocha": "^3.5.0",
-    "nsp": "^2.7.0",
-    "nyc": "^11.1.0"
+    "nsp": "^2.8.0",
+    "nyc": "^11.2.1"
   },
   "engines": {
-    "node": ">=8.3.0"
+    "node": ">=8.4.0"
   },
   "keywords": [
     "http",
-    "observable",
     "proxy",
-    "reactivex",
     "reverse",
     "routing",
-    "rxjs",
     "server",
     "websocket"
   ],
