--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "morgan": "^1.8.2"
   },
   "devDependencies": {
-    "@cedx/coveralls": "^4.0.0",
+    "@cedx/coveralls": "^5.0.0",
     "@cedx/gulp-david": "^10.0.0",
     "chai": "^4.1.2",
     "del": "^3.0.0",
@@ -46,6 +46,6 @@
   "scripts": {
     "coverage": "coveralls var/lcov.info",
     "start": "gulp watch",
-    "test": "nyc --report-dir=var --reporter=lcovonly mocha --recursive"
+    "test": "nyc mocha"
   }
 }
