--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple reverse proxy server supporting WebSockets.",
   "homepage": "https://github.com/cedx/reverse-proxy.js",
   "license": "MIT",
-  "main": "./lib/index",
+  "main": "./lib/index.js",
   "name": "@cedx/reverse-proxy",
   "preferGlobal": true,
   "repository": "cedx/reverse-proxy.js",
