--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "main": "./lib/index.js",
   "name": "@cedx/reverse-proxy",
   "repository": "cedx/reverse-proxy.js",
-  "version": "9.0.0",
+  "version": "9.1.0",
   "bin": {
-    "reverse_proxy": "./bin/reverse_proxy.js"
+    "reverse-proxy": "./bin/reverse_proxy.js"
   },
   "dependencies": {
-    "commander": "^2.12.2",
+    "commander": "^2.13.0",
     "http-proxy": "^1.16.2",
     "js-yaml": "^3.10.0",
     "morgan": "^1.9.0"
@@ -23,11 +23,11 @@
     "chai": "^4.1.2",
     "del": "^3.0.0",
     "esdoc": "^1.0.4",
-    "esdoc-node": "^1.0.2",
+    "esdoc-node": "^1.0.3",
     "esdoc-standard-plugin": "^1.0.0",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^4.0.0",
-    "mocha": "^4.0.1",
+    "gulp-eslint": "^4.0.2",
+    "mocha": "^5.0.0",
     "nsp": "^3.1.0",
     "nyc": "^11.4.1"
   },
