--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ site_url: https://cedx.github.io/reverse-proxy.js
 docs_dir: doc
 site_dir: web
 
-repo_name: cedx/reverse-proxy.js
+repo_name: GitHub
 repo_url: https://github.com/cedx/reverse-proxy.js
 edit_uri: ''
 
