--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "commander": "^2.15.1",
     "http-proxy": "^1.16.2",
-    "js-yaml": "^3.11.0",
-    "morgan": "^1.9.0"
+    "js-yaml": "^3.11.0"
   },
   "devDependencies": {
     "@cedx/coveralls": "^5.1.0",
