Updated the project URL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Reverse-Proxy.js
 site_description: Simple reverse proxy server supporting WebSockets, implemented in JavaScript.
 site_author: Cédric Belin - cedric@belin.io
-site_url: https://cedx.github.io/reverse-proxy.js
+site_url: https://dev.belin.io/reverse-proxy.js
 
 docs_dir: doc
 site_dir: web
