--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "typescript": "^3.0.1"
   },
   "engines": {
-    "node": ">=10.8.0"
+    "node": ">=10.8.0",
+    "npm": ">=6.2.0"
   },
   "keywords": [
     "http",
