--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "./lib/index.js",
   "name": "@cedx/reverse-proxy",
   "repository": "cedx/reverse-proxy.js",
+  "types": "./lib/index.d.ts",
   "version": "10.0.0",
   "bin": {
     "reverse-proxy": "./bin/reverse_proxy.js"
@@ -17,22 +18,23 @@
     "js-yaml": "^3.12.0"
   },
   "devDependencies": {
-    "@cedx/coveralls": "^6.0.0",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.5.6",
+    "@cedx/coveralls": "^7.1.0",
+    "@types/chai": "^4.1.4",
+    "@types/node": "^10.7.1",
     "chai": "^4.1.2",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "mocha": "^5.2.0",
+    "mocha-typescript": "^1.1.17",
     "nyc": "^13.0.1",
-    "source-map-support": "^0.5.6",
-    "ts-node": "^7.0.0",
+    "source-map-support": "^0.5.8",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typedoc": "^0.12.0",
     "typescript": "^3.0.1"
   },
   "engines": {
-    "node": ">=10.8.0",
+    "node": ">=10.9.0",
     "npm": ">=6.2.0"
   },
   "keywords": [
@@ -47,6 +49,6 @@
     "coverage": "coveralls var/lcov.info",
     "prepare": "tsc",
     "start": "gulp watch",
-    "test": "nyc mocha test/**/*.ts"
+    "test": "nyc mocha"
   }
 }
