--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-  "author": "Cédric Belin <cedric@belin.io>",
   "bugs": "https://github.com/cedx/reverse-proxy.js/issues",
-  "description": "Simple reverse proxy server supporting WebSockets.",
+  "description": "Personal reverse proxy server supporting WebSockets.",
   "homepage": "https://dev.belin.io/reverse-proxy.js",
   "license": "MIT",
-  "main": "./lib/index.js",
+  "main": "lib/index",
   "name": "@cedx/reverse-proxy",
-  "repository": "cedx/reverse-proxy.js",
-  "types": "./lib/index.d.ts",
+  "repository": "github:cedx/reverse-proxy.js",
+  "types": "lib/index.d.ts",
   "version": "10.0.0",
+  "author": {
+    "email": "cedric@belin.io",
+    "name": "Cédric Belin",
+    "url": "https://belin.io"
+  },
   "bin": {
-    "reverse-proxy": "./bin/reverse_proxy.js"
+    "reverse-proxy": "bin/main.js"
   },
   "dependencies": {
     "commander": "^2.19.0",
     "http-proxy": "^1.17.0",
-    "js-yaml": "^3.12.0"
+    "js-yaml": "^3.12.1"
   },
   "devDependencies": {
-    "@cedx/coveralls": "^8.1.0",
+    "@cedx/coveralls": "^8.4.0",
     "@types/chai": "^4.1.7",
     "@types/http-proxy": "^1.16.2",
-    "@types/js-yaml": "^3.11.2",
-    "@types/node": "^10.12.0",
+    "@types/js-yaml": "^3.12.0",
+    "@types/node": "^10.12.21",
     "chai": "^4.2.0",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.17",
-    "nyc": "^13.1.0",
-    "source-map-support": "^0.5.8",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typedoc": "^0.13.0",
-    "typescript": "^3.1.3"
+    "nyc": "^13.2.0",
+    "source-map-support": "^0.5.10",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typedoc": "^0.14.2",
+    "typescript": "^3.3.1"
   },
   "engines": {
-    "node": ">=10.13.0",
+    "node": ">=10.15.0",
     "npm": ">=6.4.0"
   },
   "keywords": [
