--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Reverse-Proxy.js
-site_description: Simple reverse proxy server supporting WebSockets, implemented in TypeScript.
+site_description: Personal reverse proxy server supporting WebSockets, implemented in TypeScript.
 site_author: Cédric Belin - cedric@belin.io
 site_url: https://dev.belin.io/reverse-proxy.js
 
@@ -10,37 +10,37 @@ repo_name: GitHub
 repo_url: https://github.com/cedx/reverse-proxy.js
 edit_uri: ''
 
-copyright: Copyright &copy; 2014 - 2018 Cédric Belin
+copyright: Copyright &copy; 2014 - 2019 Cédric Belin
 google_analytics:
-- !!python/object/apply:os.getenv [GOOGLE_ANALYTICS_ID]
-- auto
+  - !!python/object/apply:os.getenv [GOOGLE_ANALYTICS_ID]
+  - auto
 
 extra:
   social:
-  - {type: globe, link: 'https://belin.io'}
-  - {type: github, link: 'https://github.com/cedx'}
-  - {type: twitter, link: 'https://twitter.com/cedxbelin'}
-  - {type: linkedin, link: 'https://linkedin.com/in/cedxbelin'}
+    - {type: globe, link: 'https://belin.io'}
+    - {type: github, link: 'https://github.com/cedx'}
+    - {type: twitter, link: 'https://twitter.com/cedxbelin'}
+    - {type: linkedin, link: 'https://linkedin.com/in/cedxbelin'}
 
 markdown_extensions:
-- admonition
-- codehilite
+  - admonition
+  - codehilite
 
-pages:
-- Overview: index.md
-- Installation: installation.md
-- Usage:
-  - Command line interface: usage/cli.md
-  - Configuration: usage/configuration.md
-  - Stand-alone proxy server: usage/standalone_server.md
-  - Using HTTPS: usage/using_https.md
-  - Hostname routing: usage/hostname_routing.md
-  - Listening on multiple ports: usage/multiple_ports.md
-  - Custom HTTP headers: usage/http_headers.md
-- About:
-  - Changelog: about/changelog.md
-  - License: about/license.md
-  - See also: about/see_also.md
+nav:
+  - Overview: index.md
+  - Installation: installation.md
+  - Usage:
+      - Command line interface: usage/cli.md
+      - Configuration: usage/configuration.md
+      - Stand-alone proxy server: usage/standalone_server.md
+      - Using HTTPS: usage/using_https.md
+      - Hostname routing: usage/hostname_routing.md
+      - Listening on multiple ports: usage/multiple_ports.md
+      - Custom HTTP headers: usage/http_headers.md
+  - About:
+      - Changelog: about/changelog.md
+      - License: about/license.md
+      - See also: about/see_also.md
 
 theme:
   name: material
