--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -3,8 +3,8 @@ site_description: Personal reverse proxy server supporting WebSockets, implement
 site_author: Cédric Belin - cedric@belin.io
 site_url: https://dev.belin.io/reverse-proxy.js
 
-docs_dir: doc
-site_dir: web
+docs_dir: .
+site_dir: ../web
 
 repo_name: GitHub
 repo_url: https://github.com/cedx/reverse-proxy.js
