--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://belin.io"
   },
   "bin": {
-    "reverse-proxy": "bin/main.js"
+    "reverse-proxy": "bin/reverse-proxy.js"
   },
   "dependencies": {
     "commander": "^2.20.0",
@@ -22,7 +22,7 @@
     "js-yaml": "^3.13.1"
   },
   "devDependencies": {
-    "@cedx/coveralls": "^8.5.0",
+    "@cedx/coveralls": "^8.6.0",
     "@types/chai": "^4.1.7",
     "@types/http-proxy": "^1.17.0",
     "@types/js-yaml": "^3.12.1",
@@ -32,7 +32,7 @@
     "gulp": "^4.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "mocha": "^6.1.2",
+    "mocha": "^6.1.3",
     "mocha-typescript": "^1.1.17",
     "nyc": "^13.3.0",
     "source-map-support": "^0.5.12",
