--- a/etc/mkdocs.yaml
+++ b/etc/mkdocs.yaml
@@ -3,7 +3,7 @@ site_description: Personal reverse proxy server supporting WebSockets, implement
 site_author: Cédric Belin - cedric@belin.io
 site_url: https://dev.belin.io/reverse-proxy.js
 
-docs_dir: .
+docs_dir: ../doc
 site_dir: ../web
 
 repo_name: GitHub
