--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/chai": "^4.1.7",
     "@types/http-proxy": "^1.17.0",
     "@types/js-yaml": "^3.12.1",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.5",
     "chai": "^4.2.0",
     "del": "^4.1.0",
@@ -33,7 +34,6 @@
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "mocha": "^6.1.4",
-    "mocha-typescript": "^1.1.17",
     "nyc": "^13.3.0",
     "source-map-support": "^0.5.12",
     "ts-node": "^8.1.0",
