--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
     "@types/chai": "^4.1.7",
     "@types/http-proxy": "^1.17.0",
     "@types/js-yaml": "^3.12.1",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.7",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^11.13.15",
     "chai": "^4.2.0",
-    "del": "^4.1.0",
-    "gulp": "^4.0.1",
+    "del": "^5.0.0",
+    "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.0",
     "source-map-support": "^0.5.12",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
     "typedoc": "^0.14.2",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.2"
   },
   "engines": {
     "node": ">=12.0.0",
@@ -55,7 +55,7 @@
   ],
   "scripts": {
     "coverage": "gulp coverage",
-    "prepare": "gulp build",
+    "prepack": "gulp build",
     "start": "gulp watch",
     "test": "gulp test"
   }
