--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "server",
     "websocket"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/cedx"
+  },
   "scripts": {
     "coverage": "gulp coverage",
     "prepack": "gulp",
