--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "reverse-proxy": "bin/reverse-proxy.js"
   },
   "dependencies": {
-    "commander": "^3.0.2",
+    "commander": "^4.0.0",
     "http-proxy": "^1.18.0",
     "js-yaml": "^3.13.1"
   },
@@ -27,10 +27,10 @@
     "@types/chai": "^4.2.4",
     "@types/gulp": "^4.0.6",
     "@types/gulp-replace": "^0.0.31",
-    "@types/http-proxy": "^1.17.0",
+    "@types/http-proxy": "^1.17.1",
     "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.5",
+    "@types/node": "^12.12.6",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "chai": "^4.2.0",
@@ -39,7 +39,7 @@
     "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
     "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.0-beta.0",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.4.1",
     "typedoc": "^0.15.0",
