--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
   "files": [
     "lib/"
   ],
+  "funding": {
+    "type": "patreon",
+    "url": "https://www.patreon.com/cedx"
+  },
   "keywords": [
     "esm",
     "http",
