--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/http-proxy": "^1.17.2",
     "@types/js-yaml": "^3.12.1",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.20",
+    "@types/node": "^12.12.21",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "chai": "^4.2.0",
@@ -39,7 +39,7 @@
     "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
     "mocha": "^6.2.2",
-    "nyc": "^15.0.0-beta.3",
+    "nyc": "^15.0.0",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.5.4",
     "typedoc": "^0.15.5",
