--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
   },
   "devDependencies": {
     "@cedx/coveralls": "^9.4.0",
-    "@types/chai": "^4.2.7",
     "@types/http-proxy": "^1.17.3",
     "@types/js-yaml": "^3.12.1",
-    "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.7",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
@@ -36,10 +34,7 @@
     "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
-    "mocha": "^7.0.0",
-    "nyc": "^15.0.0",
-    "source-map-support": "^0.5.16",
-    "ts-node": "^8.6.2",
+    "mocha": "7.0.0-esm1",
     "typedoc": "^0.16.4",
     "typescript": "^3.7.4"
   },
